--- a/index.html
+++ b/index.html
@@ -1,1 +1,70 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Photography</title>
+</head>
+
+<body>
+    <main>
+        <div id="landing">
+            <div id="landing-text">
+                <div id="landing-text-inner">
+                    <h1>Photography</h1>
+                    <h2>Beautiful Natural Photography</h2>
+                    <a href="#images" class="btn" id="view-work"> View Work </a>
+                </div>
+            </div>
+            <div id="landing-image"></div>
+        </div>
+
+        <div id="images">
+            <div id="header">
+                <h2>Our Work</h2>
+            </div>
+
+            <img src="https://source.unsplash.com/1600x900/?nature,water" alt="">
+            <div class="caption">
+                <h3>Water</h3>
+                <p>“I would love to live like a river flows, carried by the surprise of its own unfolding.” </p>
+            </div>
+            <img src="https://source.unsplash.com/1600x900/?nature,trees" alt="">
+            <div class="caption">
+                <h3>Trees</h3>
+                <p>In nature, nothing is perfect and everything is perfect. Trees can be contorted, bent in weird ways, and they're still beautiful</p>
+            </div>
+            <img src="https://source.unsplash.com/1600x900/?nature,flowers" alt="">
+            <div class="caption">
+                <h3>Flowers</h3>
+                <p>Just like a flower, I have to be where the sun shines.</p>
+            </div>
+            <img src="https://source.unsplash.com/1600x900/?nature,animals" alt="">
+            <div class="caption">
+                <h3>Animals</h3>
+                <p>You can't buy happiness, but you can rescue it.</p>
+            </div>
+            <img src="https://source.unsplash.com/1600x900/?nature,clouds" alt="">
+            <div class="caption">
+                <h3>Clouds</h3>
+                <p>"Clouds come floating into my life, no longer to carry rain or usher storm, but to add color to my sunset sky."</p>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <h3>Contact US</h3>
+         <p>Email:
+            <strong>nempal.singh.377@gmail.com</strong>
+        </p>
+
+        <p>Phone:
+            <strong>+91-7982196682</strong>
+        </p>
+    </footer>
+
+</body>
+
+</html>
