--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="landing">
             <div id="landing-text">
                 <div id="landing-text-inner">
-                    <h1>Photography</h1>
+                    <h1>J.K Photography</h1>
                     <h2>Beautiful Natural Photography</h2>
                     <a href="#images" class="btn" id="view-work"> View Work </a>
                 </div>
@@ -55,7 +55,7 @@
         </div>
     </main>
     <footer>
-        <h3>Contact US</h3>
+        <h3>CONTACT US</h3>
          <p>Email:
             <strong>nempal.singh.377@gmail.com</strong>
         </p>
